--- a/product.html
+++ b/product.html
@@ -30,7 +30,8 @@
 
     <div class="md:p-16 p-4">
         <div class="mt-4 mb-4"><h1 class="text-2xl text-center font-bold">Ready to order? Fill out the form below!</h1></div>
-        <form action="form-submit.html">
+
+        <form action="form-submit.html" Netlify>
             <label class="block mt-4 font-bold" for="name">Your name</label>
             <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
             focus:border-purple-500" type="text" id="name" name="name">
