optimize the formatting

--- a/product.html
+++ b/product.html
@@ -58,7 +58,7 @@
             <textarea rows="6" class="p-2 w-full border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
             focus:border-purple-500" id="order" name="order"></textarea>
         
-            <button class="block mt-4 text-white bg-purple-500 rounded px-4 py-2">Submit order!</button>
+            <button class="block mt-4 text-white bg-pink-600 rounded px-4 py-2">Submit order!</button>
         </form>
 
         <div>
